<resources>
    <string name="title_activity_search_trip">meRame - Cari teman ngetrip</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_result_trip">Result Trip</string>
    <string name="title_activity_result_trip_detail">Result Trip Detail</string>
    <string name="title_activity_main">meRame</string>

    <string name="button_main_search">Cari teman ngetrip</string>
    <string name="button_main_create">Buat rencana ngetrip</string>
    <string name="button_main_listTrip">Daftar trip yang diikuti</string>
    <string name="button_main_chatRoom">Chat room</string>

    <string name="label_rencana_trip">Rencana ngetrip</string>
    <string name="label_teman_trip">Teman ngetrip</string>
    <string name="label_teman_trip_header">Pilih teman ngetrip </string>
    <string name="label_detail_teaser">Video teaser</string>
    <string name="label_detail_deskripsi">Tentang trip ini</string>
    <string name="label_detail_follower">Pengikut</string>

    <string name="hint_place_autocomplete">Ketik tempat tujuan</string>
    <string name="hint_usia">Usia</string>
    <string name="hint_budget">Budget</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_month">Bulan</string>
    <string name="hint_year">Tahun</string>

    <string name="button_search">Cari</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
