<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.gamaliel.surya.merame.ResultTripDetail">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:text="@string/label_detail_teaser"
            android:textColor="#FFFFFF"
            android:background="#074D7E"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="30sp" />

        <VideoView
            android:id="@+id/video_teaser"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="300dp"
            android:layout_height="200dp" />

        <TextView
            android:id="@+id/det_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/det_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:text="@string/label_detail_deskripsi"
            android:textColor="#FFFFFF"
            android:background="#074D7E"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="30sp" />

        <TextView
            android:layout_marginTop="5dp"
            android:textSize="20dp"
            android:id="@+id/det_deskripsi"
            android:text="Trip Deskripsi"
            android:textColor="#000000"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/label_detail_follower"
            android:textColor="#FFFFFF"
            android:background="#074D7E"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="30sp" />

        <ListView
            android:id="@+id/det_list_follower"
            android:layout_width="wrap_content"
            android:scrollbars="vertical"
            android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
