<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.gamaliel.surya.merame.SearchTrip">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <TextView
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:text="@string/label_rencana_trip"
            android:textColor="#FFFFFF"
            android:background="#074D7E"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:id="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <ImageView
            android:layout_below="@id/textView"
            android:adjustViewBounds="true"
            android:layout_gravity="start"
            android:layout_width="25dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_location"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/imageView" />

        <AutoCompleteTextView
            style="?android:attr/textAppearanceLarge"
            android:textSize="20sp"
            android:textColor="#000000"
            android:textColorHint="#BDA298"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/searchTrip_autocomplete_destination"
            android:inputType="textAutoComplete|textAutoCorrect"
            android:hint="@string/hint_place_autocomplete"
            android:layout_below="@+id/textView"
            android:layout_toRightOf="@+id/imageView"
            android:layout_toEndOf="@+id/imageView"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"/>

        <ImageView
            android:adjustViewBounds="true"
            android:layout_gravity="start|bottom"
            android:layout_width="25dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_calendar"
            android:layout_height="wrap_content"
            android:layout_below="@+id/searchTrip_autocomplete_destination"
            android:layout_alignLeft="@+id/imageView"
            android:layout_alignStart="@+id/imageView"
            android:layout_marginTop="20dp"
            android:id="@+id/imageView2" />

        <Spinner
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_month"
            android:layout_alignTop="@+id/imageView2"
            android:layout_toRightOf="@+id/imageView2"
            android:layout_toEndOf="@+id/imageView2"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"/>

        <Spinner
            android:layout_marginTop="7dp"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_year"
            android:layout_below="@+id/spinner_month"
            android:layout_alignLeft="@+id/spinner_month"
            android:layout_alignStart="@+id/spinner_month"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"/>

        <ImageView
            android:adjustViewBounds="true"
            android:layout_gravity="start|bottom"
            android:layout_width="25dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_budget"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:id="@+id/imageView3"
            android:layout_below="@+id/spinner_year"
            android:layout_alignLeft="@+id/imageView"
            android:layout_alignStart="@+id/imageView" />

        <Spinner
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_budget"
            android:layout_alignTop="@+id/imageView3"
            android:layout_alignLeft="@+id/spinner_year"
            android:layout_alignStart="@+id/spinner_year"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:text="@string/label_teman_trip"
            android:textColor="#FFFFFF"
            android:background="#074D7E"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:id="@+id/textView2"
            android:layout_below="@+id/spinner_budget"
            android:layout_marginTop="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_marginTop="25dp"
            android:adjustViewBounds="true"
            android:layout_gravity="start|bottom"
            android:layout_width="25dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_age"
            android:layout_height="wrap_content"
            android:id="@+id/imageView4"
            android:layout_below="@+id/textView2"
            android:layout_alignLeft="@+id/imageView"
            android:layout_alignStart="@+id/imageView" />

        <Spinner
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_age"
            android:layout_alignTop="@+id/imageView4"
            android:layout_alignLeft="@+id/spinner_budget"
            android:layout_alignStart="@+id/spinner_budget"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"/>

        <ImageView
            android:layout_marginTop="25dp"
            android:adjustViewBounds="true"
            android:layout_gravity="start|bottom"
            android:layout_width="25dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_gender"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_age"
            android:layout_alignLeft="@+id/imageView4"
            android:layout_alignStart="@+id/imageView4"
            android:id="@+id/imageView5" />

        <Spinner
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_gender"
            android:layout_alignTop="@+id/imageView5"
            android:layout_alignLeft="@+id/spinner_age"
            android:layout_alignStart="@+id/spinner_age"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"/>

        <RelativeLayout
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:background="#00884A"
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_below="@id/spinner_gender"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_search"
            android:textSize="17sp"
            android:textColor="#FFFFFF"
            android:id="@+id/button_search"
            android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
